[package]
name = "rudric"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["Mike Lloyd"]
keywords = ["passwords", "secrets", "cli"]
categories = ["command-line-utilities", "cryptography"]
description = "CLI tool for managing secrets in a secure way"
repository = "https://github.com/mike-lloyd03/rudric"


[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "wrap_help"] }
sqlx = { version = "0.7.4", features = [
  "sqlite",
  "runtime-tokio",
  "migrate",
  "uuid",
  "time",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
orion = { version = "0.17.6", features = ["serde"] }
xdg = "2.5.2"
dialoguer = "0.11.0"
serde = "1.0.197"
colored_json = "4.1.0"
uuid = { version = "1.7.0", features = ["v4"] }
tempfile = "3.10.1"
base64 = "0.21.7"
regex = "1.10.3"
tabled = { version = "0.15.0", features = ["ansi"] }
time = "0.3.34"
clap_complete = "4.5.1"
duration-str = "0.7.1"
toml = "0.8.12"

[dev-dependencies]
assert_cmd = "2.0.14"
rexpect = "0.5.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
