[package]
name = "rudric"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["Mike Lloyd"]
keywords = ["passwords", "secrets", "cli"]
categories = ["command-line-utilities", "cryptography"]
description = "CLI tool for managing secrets in a secure way"
repository = "https://github.com/mike-lloyd03/rudric"


[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
sqlx = { version = "0.7.4", features = [
  "sqlite",
  "runtime-tokio",
  "migrate",
  "uuid",
  "time",
] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
orion = { version = "0.17.6", features = ["serde"] }
xdg = "2.5.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde = "1.0.200"
colored_json = "4.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
tempfile = "3.10.1"
base64 = "0.21.7"
regex = "1.10.4"
tabled = { version = "0.16.0", features = ["ansi"] }
time = "0.3.36"
clap_complete = "4.5.2"
duration-str = "0.11.0"
toml = "0.8.12"
ctrlc = "3.4.4"

[dev-dependencies]
assert_cmd = "2.0.14"
rexpect = "0.6.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
